# LambdaPy

./: README.md  pyproject.toml
examples/: 01_identity.lp  02_nat.lp  03_vec.lp  04_eq.lp  prelude_and_examples.lp
lambdapy/: __init__.py  check.py  cli.py  context.py  errors.py  eval.py  grammar.lark  nameenv.py  parser.py  prelude.py  pretty.py  quote.py  repl.py  subst.py  syntax.py
tests/: test_check.py  test_eval.py  test_haskell_compat.py  test_integration.py  test_paper_transcripts.py  test_parser.py  test_prelude.py  test_pretty.py  test_quote.py  test_subtyping.py
