[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lambdapy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["lark>=1.1", "rich>=13"]

[project.optional-dependencies]
dev = ["pytest>=7", "mypy>=1.5", "pytest-cov", "hypothesis"]

[project.scripts]
lambdapy = "lambdapy.cli:main"

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
